style.css
/* ... */
.dataTables_wrapper .dataTables_filter input {
    display: block;
    font-size: 16px;
    background-color: rgb(var(--ui-color-form-background));
    border: 2px solid rgb(var(--ui-color-form-border));
    height: 32px;
    margin-top: 3px;
    padding: 2px 10px;
    border-radius: 2px;
    -webkit-appearance: none;
    color: rgb(var(--ui-color-text));
}
@media screen and (min-width: 640px) {
    .dataTables_wrapper .dataTables_filter input {
    }
}

.dataTables_wrapper .dataTables_filter input:focus {
    font-size: 16px;
    border-color: rgb(var(--ui-color-primary));
}

.dataTables_wrapper .dataTables_length select {
    height: 25px;
    padding-top: 0;
    padding-bottom: 0;
    font-size: 16px;
}

.dataTables_wrapper .dataTables_length select option {
    font-size: 16px;
}

.dataTables_wrapper .dataTables_length label {
    display: block;
    font-weight: bold;
    font-size: 0.9rem;
}

.dataTables_wrapper .dataTables_info {
    padding: 0;
}

.toolbar.secondary {
    display: block;
    padding-bottom: 10px;
    border-bottom: 1px solid rgb(var(--ui-color-background-080));
}

.toolbar.secondary .info {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.dataTables_wrapper .dataTables_filter {
    margin-top: 0;
}

/* main table */
#table_wrapper {
    padding: 0 0 10px 0;
}

.table-inner {
    width: 100%;
    position: relative;
}

#table {
    border-top: 1px solid rgb(var(--ui-color-table-row-border));
}

.dataTables_scroll .dataTables_scrollHead {
    position: sticky !important;
    position: -webkit-sticky !important;
    top: 0;
    z-index: 3;
    background-color: rgb(var(--ui-color-table-row-bg));
    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
    -webkit-backdrop-filter: blur(20px);
    backdrop-filter: blur(20px);
}
@supports (-webkit-backdrop-filter: blur(20px)) {
    .dataTables_scroll .dataTables_scrollHead {
        background-color: rgba(var(--ui-color-table-row-bg),0.5);
    }
}

.dataTables_scroll .dataTables_scrollHead thead th {
    height: 20px !important;
}
@supports (-webkit-backdrop-filter: blur(20px)) {
    .dataTables_scroll .dataTables_scrollHead thead th {
        
    }
}

table.dataTable thead th,
table.dataTable thead td {
    border-bottom: 0;
}


table.dataTable thead th,
table.dataTable thead td {
    padding-left: 10px;
    padding-right: 20px;
}

/* override sorting button */
table.dataTable thead .sorting,
table.dataTable thead .sorting_asc,
table.dataTable thead .sorting_desc,
table.dataTable thead .sorting_asc_disabled,
table.dataTable thead .sorting_desc_disabled {
  background-image: none;
}

table.dataTable thead th {
    position: relative;
}
table.dataTable thead .sorting:after,
table.dataTable thead .sorting_asc:after,
table.dataTable thead .sorting_desc:after,
table.dataTable thead .sorting_asc_disabled:after,
table.dataTable thead .sorting_desc_disabled:after {
    content: "";
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    display: inline-block;
    margin-left: 3px;
    width: 19px;
    height: 100%;
    background-image: url("datatables/images/sort_both.png");
    background-position: right center;
    background-repeat: no-repeat;
    opacity: var(--sort-arrows-opacity);
}
table.dataTable thead .sorting_asc:after {
    background-image: url("datatables/images/sort_asc.png");
    opacity: 1;
}
table.dataTable thead .sorting_desc:after {
    background-image: url("datatables/images/sort_desc.png");
    opacity: 1;
}
table.dataTable thead .sorting_asc_disabled:after {
    background-image: url("datatables/images/sort_asc_disabled.png");
}
table.dataTable thead .sorting_desc_disabled:after {
    background-image: url("datatables/images/sort_desc_disabled.png");
}

thead span {
    display: block;
}

thead th.nowrap {
    white-space: nowrap;
}

.dataTables_wrapper.no-footer .dataTables_scrollBody {
    border-bottom-color: rgb(var(--ui-color-table-row-border));
}

/* rowgroup header */
tr.dtrg-start td div {
    display: inline-block;
    position: sticky;
    position: -webkit-sticky;
    left: 10px;
}

/* column contents */
tbody td {
    position: relative;
}
@media screen and (max-width: 480px) {
    table.dataTable tbody tr:not(.dtrg-group) td {
        padding-top: 35px;
    }
}

@media screen and (max-width: 480px) {
    tbody td .inner-wrap {
        display: flex;
        flex-flow: column;
        justify-content: center;
    }
}

table.dataTable tbody td.id {
    font-variant-numeric: tabular-nums;
    font-size: 0.8em;
    padding-right: 0 !important;
}
@media screen and (max-width: 480px) {
    table.dataTable thead th.id,
    table.dataTable tbody td.id {
        display: none !important;
    }
}


table.dataTable thead th.jacket,
table.dataTable tbody td.jacket {
    padding-right: 5px;
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    height: 50px;
    width: 60px !important;
    z-index: 2;
    /*background-color: inherit;*/
}

table.dataTable th.jacket span {
    visibility: hidden;
}
table.dataTable td.jacket {
    vertical-align: top !important;
    padding-top: 8px !important;
}
td.jacket .index {
    display: none;
    position: absolute;
    top: 4px;
    left: 8px;
    font-size: 0.6em;
    font-variant-numeric: tabular-nums;
}
@media screen and (max-width: 480px) {
    td.jacket .index {
        display: block;
        width: 50px;
        opacity: 0.6;
    }
}

td.jacket .img-wrap {
    display: block;
    margin: -8px -10px;
    padding: 12px 8px 12px 8px;
    background-color: rgb(var(--ui-color-table-row-bg));
    mask-image: 
        linear-gradient(to right, rgb(0,0,0) 90%, rgba(0,0,0,0));
    -webkit-mask-image: 
        linear-gradient(to right, rgb(0,0,0) 90%, rgba(0,0,0,0));
}
table.dataTable tbody tr.odd td.jacket .img-wrap {
    background-color: 
        rgb(var(--ui-color-table-row-bg-odd));
}
table.dataTable tbody tr:hover td.jacket .img-wrap {
    background-color: 
        rgb(var(--ui-color-table-row-bg-hover));
}
/* ... */

